@startuml
package v003 {

    class Book {
        -int id
        -String title
        -int publicationYear
        -final String type
        +Book(int id, String title, int publicationYear, String type)
        +int getId()
        +String toString()
    }

    class Author {
        -int id
        -String name
        +Author(int id, String name)
        +int getId()
        +String getName()
        +String toString()
    }

    class BookAuthor {
        -int bookId
        -int authorId
        +BookAuthor(int bookId, int authorId)
        +int getBookId()
        +int getAuthorId()
    }

    class LibraryManager {
        -List<Book> books
        -List<Author> authors
        -List<BookAuthor> relations
        -Scanner scanner
        +LibraryManager()
        +void startLibraryManager()
        -void listBooks()
        -void addBook()
        -void addBook(Book book)
        -void addAuthor(Book book)
        -void addAuthor(Author author)
        -void addRelation(int bookId, int authorId)
        -List<Author> getAuthorsByBookId(int bookId)
        -List<Book> getBooksByAuthorId(int authorId)
        -Book findBookById(int bookId)
        -Author findAuthorById(int authorId)
        -void listAuthors()
    }

    LibraryManager -- "0..*" Book : manages
    LibraryManager -- "0..*" Author : manages
    LibraryManager -- "0..*" BookAuthor : manages
    Book "1" -l- "0..*" BookAuthor : contains
    Author "1" --r- "0..*" BookAuthor : contains

}
@enduml
